--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "divya-gaurav-portfolio",
+  "name": "vikas-kumar-sharma-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy" : "npm run build",
